Fix different names between group and ability

--- a/css/index.css
+++ b/css/index.css
@@ -247,7 +247,7 @@ table td select {
 #militar { top: 214px; left: 2px; height: 44px; line-height: 44px; }
 #athl    { top: 280px; left: 2px; height: 89px; line-height: 89px; }
 #know    { top: 392px; left: 2px; height: 44px; line-height: 44px; }
-#coc     { top: 459px; left: 2px; height: 134px; line-height: 132px; }
+#cac     { top: 459px; left: 2px; height: 134px; line-height: 132px; }
 #disc    { top: 616px; left: 2px; height: 29px; line-height: 29px; }
 #dress   { top: 668px; left: 2px; height: 59px; line-height: 59px; }
 #dup     { top: 750px; left: 2px; height: 59px; line-height: 59px; }
