--- a/css/index.css
+++ b/css/index.css
@@ -536,3 +536,20 @@ input[type="checkbox"]:checked {
 .rules-intrigue table td:nth-child(4) {
     text-align: left;
 }
+
+input[type="file"], #input-show-picture {
+    width: 100%;
+    box-sizing: border-box;
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing: border-box;
+}
+
+#remove-picture-button {
+    border: 1px solid black;
+    background-color: red;
+    color: #ffffff;
+    padding: 5px 10px;
+    position:absolute;
+    top:0;
+    right:0;
+}
